Add shared section header for each section, move section components into cards where possible

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -100,15 +100,32 @@
 .bg-aedg-navy {
   background-color: $aedg-navy;
 }
+
 .bg-aedg-yellow {
   background-color: $aedg-yellow;
+}
+
+.bg-aedg-navy-subtle {
+  background-color: rgba($aedg-navy, 0.15);
+}
+
+.bg-aedg-yellow-subtle {
+  background-color: rgba($aedg-yellow, 0.15);
 }
 
 .text-aedg-navy {
   color: $aedg-navy;
 }
+
 .text-aedg-yellow {
   color: $aedg-yellow;
+}
+
+.border-aedg-navy {
+  border-color: $aedg-navy;
+}
+.border-aedg-yellow {
+  border-color: $aedg-yellow;
 }
 
 .card {
