--- a/app/views/communities/power_generation/_generation.html.haml
+++ b/app/views/communities/power_generation/_generation.html.haml
@@ -2,44 +2,52 @@
 - show_monthly_gen = @community.show_monthly_generation?
 - show_yearly_gen = @community.show_yearly_generation?
 
--# --- Header Section ---
-.d-flex.align-items-center.mb-3
-  %i.bi.bi-building-gear.me-2.fs-4
-  %h4.mb-0.me-2.py-3.anchor-offset Generation
-  %hr.flex-grow-1.mt-1.mb-0.mx-2
+= render 'shared/section_header',
+  icon: 'building-gear',
+  title: 'Generation',
+  description: 'Energy generation trends and fuel source mix' do
   = render "communities/#{parent_tab}/generation/about_modal"
 
--# --- Tab Navigation (Monthly vs Yearly) ---
-- if show_monthly_gen && show_yearly_gen
-  .d-flex.justify-content-between.align-items-center.mb-3
-    %ul.nav.nav-tabs
-      %li.nav-item
-        = link_to "#yearly-gen-pane", class: "nav-link active", data: { bs_toggle: "tab" } do
-          %i.bi.bi-calendar-event.me-1
-          Yearly Generation
-      
-      %li.nav-item
-        = link_to "#monthly-gen-pane", class: "nav-link", data: { bs_toggle: "tab" } do
-          %i.bi.bi-calendar3.me-1
-          Monthly Generation
+.section-body.mx-md-5.mx-3
+  - if show_monthly_gen && show_yearly_gen
+    .mb-4
+      %ul.nav.nav-pills.bg-white.p-1.rounded.border.d-inline-flex
+        %li.nav-item
+          = link_to "#yearly-gen-pane", class: "nav-link active px-4", data: { bs_toggle: "tab" } do
+            %i.bi.bi-calendar-event.me-1
+            Yearly
+        
+        %li.nav-item
+          = link_to "#monthly-gen-pane", class: "nav-link px-4", data: { bs_toggle: "tab" } do
+            %i.bi.bi-calendar3.me-1
+            Monthly
 
--# --- Tab Content ---
-.tab-content
-  - if show_yearly_gen
-    #yearly-gen-pane.tab-pane.fade.show.active
-      .row.mb-4
-        .col-12
-          .p-3.border.rounded.bg-light.mb-3
-            = render "communities/#{parent_tab}/generation/yearly_chart"
-          .mt-2
-            = render "communities/#{parent_tab}/generation/yearly_data"
+  .tab-content
+    - if show_yearly_gen
+      #yearly-gen-pane.tab-pane.fade.show.active
+        .row
+          .col-12
+            .p-4.border.rounded-3.bg-white.shadow-sm
+              .mb-4
+                = render "communities/#{parent_tab}/generation/yearly_chart"
+              
+              .pt-4.border-top
+                .d-flex.align-items-center.mb-3
+                  %i.bi.bi-table.me-2.text-primary
+                  %h6.mb-0.fw-bold Yearly Production Data
+                = render "communities/#{parent_tab}/generation/yearly_data"
 
-  - if show_monthly_gen
-    - monthly_active = !show_yearly_gen
-    #monthly-gen-pane.tab-pane.fade{ class: ("show active" if monthly_active) }
-      .row.mb-4
-        .col-12
-          .p-3.border.rounded.bg-light.mb-3
-            = render "communities/#{parent_tab}/generation/monthly"
-          .mt-2
-            = render "communities/#{parent_tab}/generation/monthly_data"
+    - if show_monthly_gen
+      - monthly_active = !show_yearly_gen
+      #monthly-gen-pane.tab-pane.fade{ class: ("show active" if monthly_active) }
+        .row
+          .col-12
+            .p-4.border.rounded-3.bg-white.shadow-sm
+              .mb-4
+                = render "communities/#{parent_tab}/generation/monthly"
+              
+              .pt-4.border-top
+                .d-flex.align-items-center.mb-3
+                  %i.bi.bi-table.me-2.text-primary
+                  %h6.mb-0.fw-bold Monthly Production Data
+                = render "communities/#{parent_tab}/generation/monthly_data"
