--- a/app/views/communities/electric_rates_sales.html.haml
+++ b/app/views/communities/electric_rates_sales.html.haml
@@ -1,15 +1,15 @@
+- tab = 'electric_rates_sales'
+- links = [ |
+    { title: 'Rates', anchor: '#rates', icon: 'coin', show: @community.show_rates? }, |
+    { title: 'Sales', anchor: '#sales', icon: 'cash-coin', show: @community.show_sales? }, |
+  ] |
+
 = turbo_frame_tag "community_tab_content" do
-  - tab = 'electric_rates_sales'
-  - links = [ |
-      { title: 'Rates', anchor: '#rates', icon: 'coin', show: @community.show_rates? }, |
-      { title: 'Sales', anchor: '#sales', icon: 'cash-coin', show: @community.show_sales? }, |
-    ] |
-  
   = render 'shared/tab_nav', links: links
   
   - if @community.show_rates?
-    #rates.scroll-section.my-5.mx-3.mx-md-5.mt-3
+    #rates.scroll-section.mb-5
       = render "communities/#{tab}/rates"
   - if @community.show_sales?
-    #sales.scroll-section.my-5.mx-3.mx-md-5
+    #sales.scroll-section.mb-5
       = render "communities/#{tab}/sales"
