--- a/app/views/communities/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/electric_rates_sales/_rates.html.haml
@@ -1,13 +1,28 @@
 - parent_tab = "electric_rates_sales"
 
-.d-flex.align-items-center.mb-3
-  %i.bi.bi-coin.me-2.fs-4
-  %h4.mb-0.me-3.py-3.anchor-offset Rates
-  %hr.flex-grow-1.mt-1.mb-0.mx-2
+-# --- Section Header ---
+= render 'shared/section_header',
+  icon: 'coin',
+  title: 'Rates',
+  description: 'Residential, commercial, and industrial electric rate trends'
 
-.mb-5
-  .p-3.border.rounded.bg-light.mb-3
-    = render "communities/#{parent_tab}/rates/historical_rate_chart"
-
-.mb-3
-  = render "communities/#{parent_tab}/rates/data"
+-# --- Section Body ---
+.section-body.mx-md-5.mx-3
+  .row
+    .col-12
+      -# Main Data Card
+      .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
+        
+        -# Historical Chart Section
+        .mb-5
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-graph-up.me-2.text-primary
+            %h6.mb-0.fw-bold Historical Rate Trends
+          = render "communities/#{parent_tab}/rates/historical_rate_chart"
+        
+        -# Data Table Section
+        .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h6.mb-0.fw-bold Rate Data
+          = render "communities/#{parent_tab}/rates/data"
