--- a/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
+++ b/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
@@ -1,18 +1,36 @@
 - parent_tab = 'fuel'
 
-.d-flex.align-items-center.mb-3
-  %i.bi.bi-fuel-pump.me-2.fs-4
-  %h4.mb-0.me-3.py-3.anchor-offset Bulk Fuel Facilities
-  %hr.flex-grow-1.mt-1.mb-0.mx-2
+-# --- Section Header ---
+= render 'shared/section_header',
+  icon: 'fuel-pump',
+  title: 'Bulk Fuel Facilities',
+  description: 'Fuel storage capacity, delivery methods, and infrastructure detail'
 
-.mb-4
-  = render "communities/#{parent_tab}/bulk_fuel_facilities/map_controls"
-  = render "communities/#{parent_tab}/bulk_fuel_facilities/fuel_delivery"
+-# --- Section Body ---
+.section-body.mx-md-5.mx-3
+  -# 1. Map Controls (The Shelf)
+  .mb-4
+    = render "communities/#{parent_tab}/bulk_fuel_facilities/map_controls"
+  
+  -# 2. Delivery Summary
+  .mb-4
+    = render "communities/#{parent_tab}/bulk_fuel_facilities/fuel_delivery"
 
-- if @community.show_bulk_fuel_capacity_chart?
-  .mb-5
-    .p-3.border.rounded.bg-light.mb-3
-      = render "communities/#{parent_tab}/bulk_fuel_facilities/fuel_capacity_chart"
-
-.mb-3
-  = render "communities/#{parent_tab}/bulk_fuel_facilities/bulk_fuel_data"
+  .row
+    .col-12
+      -# Main Data Card
+      .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
+        -# Capacity Chart
+        - if @community.show_bulk_fuel_capacity_chart?
+          .mb-5
+            .d-flex.align-items-center.mb-3
+              %i.bi.bi-pie-chart.me-2.text-primary
+              %h6.mb-0.fw-bold Storage Capacity Breakdown
+            = render "communities/#{parent_tab}/bulk_fuel_facilities/fuel_capacity_chart"
+        
+        -# Data Table Section
+        .pt-4{ class: ("border-top" if @community.show_bulk_fuel_capacity_chart?) }
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h6.mb-0.fw-bold Bulk Fuel Facility Data
+          = render "communities/#{parent_tab}/bulk_fuel_facilities/bulk_fuel_data"
