--- a/app/views/communities/general.html.haml
+++ b/app/views/communities/general.html.haml
@@ -1,22 +1,21 @@
+- tab = 'general'
+- links = [ |
+    { title: 'Geography', anchor: '#geography', icon: 'map' }, |
+    { title: 'Transportation', anchor: '#transportation', icon: 'truck', show: @community.show_transportation? }, |
+    { title: 'Legislative Districts', anchor: '#legislative', icon: 'bank', show: @community.show_legislative_districts? } |
+  ] |
+
 = turbo_frame_tag "community_tab_content" do
-  - tab = 'general'
-  
-  - links = [ |
-      { title: 'Geography', anchor: '#geography', icon: 'map' }, |
-      { title: 'Transportation', anchor: '#transportation', icon: 'truck', show: @community.show_transportation? }, |
-      { title: 'Legislative Districts', anchor: '#legislative', icon: 'bank', show: @community.show_legislative_districts? } |
-    ] |
-  
+
   = render 'shared/tab_nav', links: links
-  
-  -# --- Content Sections ---
-  #geography.scroll-section.my-5.mx-3.mx-md-5
+
+  #geography.scroll-section.mb-5
     = render "communities/#{tab}/geography"
-  
+
   - if @community.show_transportation?
-    #transportation.scroll-section.my-5.mx-3.mx-md-5
+    #transportation.scroll-section.mb-5
       = render "communities/#{tab}/transportation"
-  
+
   - if @community.show_legislative_districts?
-    #legislative.scroll-section.my-5.mx-3.mx-md-5
+    #legislative.scroll-section.mb-5
       = render "communities/#{tab}/legislative_districts"
