--- a/app/views/communities/power_generation.html.haml
+++ b/app/views/communities/power_generation.html.haml
@@ -1,20 +1,19 @@
+- tab = 'power_generation'
+- links = [ |
+  { title: 'Utilities', anchor: '#utilities', icon: 'buildings', show: @community.show_utilities? }, |
+  { title: 'Generation', anchor: '#generation', icon: 'building-gear', show: @community.show_generation? }, |
+  { title: 'Capacity', anchor: '#capacity', icon: 'lightning-fill', show: @community.show_capacity? } |
+] |
+
 = turbo_frame_tag "community_tab_content" do
-  - tab = 'power_generation'
-  
-  - links = [ |
-      { title: 'Utilities', anchor: '#utilities', icon: 'buildings', show: @community.show_utilities? }, |
-      { title: 'Generation', anchor: '#generation', icon: 'building-gear', show: @community.show_generation? }, |
-      { title: 'Capacity', anchor: '#capacity', icon: 'lightning-fill', show: @community.show_capacity? } |
-    ] |
-  
   = render 'shared/tab_nav', links: links
   
   - if @community.show_utilities?
-    #utilities.scroll-section.my-5.mx-3.mx-md-5.mt-3
+    #utilities.scroll-section.mb-5
       = render "communities/#{tab}/utilities"
   - if @community.show_generation?
-    #generation.scroll-section.my-5.mx-3.mx-md-5
+    #generation.scroll-section.mb-5
       = render "communities/#{tab}/generation"
   - if @community.show_capacity?
-    #capacity.scroll-section.my-5.mx-3.mx-md-5
+    #capacity.scroll-section.mb-5
       = render "communities/#{tab}/capacity"
