--- a/app/views/communities/power_generation/_capacity.html.haml
+++ b/app/views/communities/power_generation/_capacity.html.haml
@@ -1,14 +1,24 @@
 - parent_tab = 'power_generation'
 
-.d-flex.align-items-center.mb-3
-  %i.bi.bi-lightning-fill.me-2.fs-4
-  %h4.mb-0.me-2.py-3.anchor-offset Capacity
-  %hr.flex-grow-1.mt-1.mb-0.mx-2
+-# --- Section Header ---
+= render 'shared/section_header',
+  icon: 'lightning-fill',
+  title: 'Capacity',
+  description: 'Installed infrastructure and maximum power output' do
   = render "communities/#{parent_tab}/capacity/about_modal"
 
-.mb-5
-  .p-3.border.rounded.bg-light.mb-3
-    = render "communities/#{parent_tab}/capacity/capacity_chart"
-
-.mb-3
-  = render "communities/#{parent_tab}/capacity/capacity_data"
+-# --- Section Body ---
+.section-body.mx-md-5.mx-3
+  .row
+    .col-12
+      -# Main Chart Card
+      .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
+        .mb-4
+          = render "communities/#{parent_tab}/capacity/capacity_chart"
+        
+        -# Data Table Section
+        .pt-4.border-top
+          .d-flex.align-items-center.mb-3
+            %i.bi.bi-table.me-2.text-primary
+            %h6.mb-0.fw-bold Capacity Data
+          = render "communities/#{parent_tab}/capacity/capacity_data"
