--- a/app/views/shared/_icon_status_grid.html.haml
+++ b/app/views/shared/_icon_status_grid.html.haml
@@ -4,7 +4,7 @@
 -#   fields:  Array<Symbol>
 -#   source:  ActiveRecord source or Enumerable
 
-.container-fluid.bg-body-secondary.rounded.p-3.mb-3
+.container-fluid.bg-light.rounded.p-3.mb-3.shadow-sm
   .d-flex.flex-column.flex-md-row.align-items-center.justify-content-between.flex-wrap.gap-3
     / --- Title Block ---
     - if local_assigns[:title]
