--- a/app/views/shared/_section_header.html.haml
+++ b/app/views/shared/_section_header.html.haml
@@ -1,6 +1,6 @@
 -# locals: (icon:, title:, description:)
 
-.section-title-bar.bg-light.border-start.border-primary.border-5.p-3.shadow-sm.mb-4
+.section-title-bar.bg-body-secondary.border-start.border-primary.border-5.p-3.shadow-sm.mb-4
   .d-flex.align-items-center
     -# 1. Icon Container
     .bg-primary-subtle.rounded-circle.p-3.me-3.d-inline-flex.align-items-center.justify-content-center{ style: "flex-shrink: 0;" }
